@@ -1,5 +1,6 @@
 plugins {
     id("java")
+    id("io.spring.dependency-management") version "1.1.4"
 }
 
 java {
@@ -10,53 +11,35 @@ repositories {
     mavenCentral()
 }
 
-
-dependencies {
-    testImplementation("org.junit.jupiter:junit-jupiter:5.10.2")
-    implementation("jakarta.persistence:jakarta.persistence-api:3.1.0")
-}
-
-//tasks.test {
-//    useJUnitPlatform()
-//    doFirst {
-//        jvmArgs = [
-//            "--add-opens", "java.base/java.lang=ALL-UNNAMED",
-//            "--add-opens", "java.base/java.util=ALL-UNNAMED",
-//            "--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED"
-//        ]
-//    }
-//}
-
-tasks.withType<Test>().all {
-    useJUnitPlatform()
-    jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED",
-        "--add-opens", "java.base/java.util=ALL-UNNAMED",
-        "--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED")
-}
-
 subprojects {
     apply(plugin = "java")
+    apply(plugin = "io.spring.dependency-management")
 
     repositories {
         mavenCentral()
     }
 
-
     java.toolchain.languageVersion.set(JavaLanguageVersion.of(17))
+
+    dependencyManagement {
+        imports {
+            mavenBom("org.springframework.boot:spring-boot-dependencies:3.2.5")
+        }
+    }
 
     dependencies {
         testImplementation("org.junit.jupiter:junit-jupiter:5.10.2")
         testImplementation("org.mockito:mockito-core:5.12.0")
-//        testImplementation("org.mockito:mockito-inline:5.2.0")
         testImplementation("org.mockito:mockito-junit-jupiter:5.12.0")
-        implementation("jakarta.persistence:jakarta.persistence-api:3.1.0")
+        implementation("me.paulschwarz:spring-dotenv:4.0.0")
     }
 
     tasks.withType<Test>().all {
         useJUnitPlatform()
-        jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED",
-            "--add-opens", "java.base/java.util=ALL-UNNAMED",
-            "--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED")
     }
-
+    tasks.withType<JavaCompile> {
+        options.compilerArgs.add("-parameters")
+    }
 }
+
+
